<resources>
    <string name="app_name">NikooDriver</string>
    <string name="version">نسخه: </string>
    <string name="pleaseWait">لطفا منتظر بمانید</string>
    <string name="NikoHamrah">نیکو همراه</string>
    <string name="transportationServices">خدمات هوشمند مسافربری</string>
    <string name="insertYourPhoneNumber">شماره موبایل خود را وارد کنید</string>
    <string name="login">ورود</string>
    <string name="mobileHint1">09 - - - - - - - - -</string>
    <string name="insertCode">کد تایید خود را وارد کنید</string>
    <string name="verificationHint">- - - - -</string>
    <string name="termsText1">با ورود و ثبت نام شما با کلیه</string>
    <string name="termsText2">شرایط و قوانین</string>
    <string name="termsText3">نیکو همراه موافقت کردید</string>
    <string name="next">مرحله بعد</string>
    <string name="activeTimeExample">12:00</string>
    <string name="registration">ثبت نام</string>
    <string name="name">نام:</string>
    <string name="family">نام خانوادگی:</string>
    <string name="nationalCode">کد ملی:</string>
    <string name="mobile">موبایل: </string>
    <string name="certificateCode">کد گواهینامه: </string>
    <string name="plaque">پلاک :</string>
    <string name="vehicleType">نوع وسیله نقلیه: </string>
    <string name="all">همه: </string>
    <string name="car">سواری </string>
    <string name="van">ون </string>
    <string name="miniBus">مینی بوس </string>
    <string name="bus">اتوبوس </string>
    <string name="vehicleColor">مدل و رنگ خودرو: </string>
    <string name="white"> سمند سفید</string>
    <string name="insuranceDate">انقضا بیمه: </string>
    <string name="choosing">انتخاب</string>
    <string name="choose">انتخاب کنید</string>
    <string name="chooseOptional">انتخاب(اختیاری)</string>
    <string name="insertYourName">نام خود را وارد نمایید</string>
    <string name="insertYourFamily">نام خانوادگی خود را وارد نمایید</string>
    <string name="insertYourNationalCode">کد ملی خود را وارد نمایید</string>
    <string name="mobileHint">09*********</string>
    <string name="insertYourCertificateCode">(ده رقمی)</string>
    <string name="iran">ایران</string>
    <string name="twoLines">- -</string>
    <string name="threeLines">- - -</string>
    <string name="plaqueNumber">شماره پلاک</string>
    <string name="userName">نام کاربر</string>
    <string name="connection">اتصال</string>
    <string name="credit">اعتبار</string>
    <string name="rate">رتبه</string>
    <string name="addingTravel">جستجوی سفر</string>
    <string name="seatsCount">تعداد صندلی خالی</string>
    <string name="enterEmptySeatsCount">تعداد صندلی خالی را وارد نمایید</string>
    <string name="maximumTropeCount">حداکثر تعداد مجاز</string>
    <string name="pleaseEnterTheRightCount">لطفا مقدار صحیح را وارد نمایید</string>
    <string name="currentTravel">سفر جاری</string>
    <string name="declinedPassengers">مسافران تایید نشده</string>
    <string name="active">فعال</string>
    <string name="deactive">غیرفعال</string>
    <string name="number1000">1000</string>
    <string name="day">روز</string>
    <string name="month">ماه</string>
    <string name="year">سال</string>
    <string name="beActiveForGetTravels">برای دریافت سفر فعال شوید</string>
    <string name="yourIncome">درآمد شما</string>
    <string name="tooman">تومان</string>
    <string name="offerCode">شماره سرویس</string>
    <string name="travelsCount">تعداد سفرها: </string>
    <string name="travelsDistance">مسافت سفرها: </string>
    <string name="kilometers">کیلومتر</string>
    <string name="hoursOfDriving">ساعت رانندگی: </string>
    <string name="hour">ساعت</string>
    <string name="hoursOfPresence">ساعت حضور</string>
    <string name="yourRate">رتبه شما: </string>
    <string name="ten">10 </string>
    <string name="twenty">20</string>
    <string name="fiveHundred">500</string>
    <string name="origin">مبدا</string>
    <string name="destination">مقصد</string>
    <string name="count">تعداد</string>
    <string name="date">تاریخ</string>
    <string name="time">زمان</string>
    <string name="exampleTime">مثلا 12:30</string>
    <string name="register">ثبت</string>
    <string name="tehran">تهران</string>
    <string name="fakeDate">دوشنبه 25 مهر 1400 ساعت 18:30</string>
    <string name="fakeDestination">ساری</string>
    <string name="to">به</string>
    <string name="fare">کرایه</string>
    <string name="acceptRequest">قبول درخواست</string>
    <string name="declineRequest">رد درخواست</string>
    <string name="navigation">مسیریابی</string>
    <string name="callToPassenger">تماس با مسافر</string>
    <string name="travelCode">کد سفر: </string>
    <string name="paid">پرداخت شده</string>
    <string name="unPaid">پرداخت نشده: </string>
    <string name="person">نفر</string>
    <string name="iRode">مسافر سوار شد</string>
    <string name="endTrip">مسافر پیاده شد</string>
    <string name="startTrip">شروع سفر</string>
    <string name="line">-</string>
    <string name="MohsenNiazmand">محسن نیازمند</string>
    <string name="uploadDocs">ارسال مدارک</string>
    <string name="addDriverPicture">افزودن عکس راننده</string>
    <string name="addNationalCardPicture">افزودن عکس کارت ملی</string>
    <string name="addCarCardPicture">افزودن عکس کارت خودرو</string>
    <string name="addCertificateCardPicture">افزودن عکس گواهینامه</string>
    <string name="addTechnicalDiagnosisPicture">افزودن عکس معاینه فنی</string>
    <string name="addCertificateOfBadRecordPicture">افزودن عکس گواهی سوء پیشینه</string>
    <string name="addWorkbookPicture">افزودن عکس دفترچه کار</string>
    <string name="proceed">تایید</string>
    <string name="successfulLogin">ورود موفق</string>
    <string name="captureByCamera">استفاده از دوربین</string>
    <string name="choosingFromGallery">انتخاب از گالری</string>
    <string name="forExampleThreePerson">مثلا 3 نفر</string>
    <string name="successfulRegistration">ثبت نام موفق</string>
    <string name="finishingRegistration">به ناوگان حمل و نقل نیکو خوش آمدید،لطفا جهت تایید ثبت نام منتظر پیام از سوی کارشناسان ما باشید</string>
    <string name="distance">فاصله:</string>
    <string name="deadlineForReceivingTravel">مهلت دریافت سفر 2 دقیقه میباشد</string>
    <string name="travelDistance">مسافت سفر:</string>
    <string name="cost">هزینه:</string>
    <string name="neverMind">بیخیال</string>
    <string name="newOffer">درخواست جدید</string>
    <string name="areYouSureToLogout">آیا میخواهید از حساب خود خارج شوید؟</string>
    <string name="doYouNeedToEditYourInfos">آیا نیاز به ویرایش اطلاعات قبلی دارید؟</string>
    <string name="doYouWantToExitRegistration">آیا میخواهید مراحل ثبت نام را ترک کنید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="listIsEmpty">لیست خالی میباشد!!</string>
    <string name="cancelRequest">لغو درخواست</string>
    <string name="updateApp">آپدیت برنامه</string>
    <string name="description_update_app">برای استفاده از اپلیکیشن لطفا نسخه جدید را دریافت و نصب کنید</string>
    <string name="description_force_update_app">برای استفاده از اپلیکیشن و خدمات نیکو همراه نسبت به دریافت و نصب نسخه جدید اقدام فرمایید</string>
    <string name="navigationMistake">اشتباه در مسیریابی</string>
    <string name="timingMistake">اشتباه در زمانبندی</string>
    <string name="declinePassengerLocation">رد نمودن محل مسافر</string>
    <string name="passengerWasNotInPlace">مسافر در محل نبود</string>
    <string name="other">سایر</string>
    <string name="capacity">ظرفیت : </string>
    <string name="facility">امکانات : </string>
    <string name="serviceType">نوع سرویس : </string>
    <string name="transactions">تراکنش ها</string>
    <string name="amount">مبلغ : </string>
    <string name="TimeOfTransaction">زمان تراکنش : </string>
    <string name="transactionCode">کد تراکنش : </string>
    <string name="transactionType">نوع تراکنش : </string>
    <string name="transactionReason">شرح تراکنش : </string>
    <string name="tripCode">کد سفر : </string>
    <string name="retry">مجددا تلاش کنید</string>
    <string name="uploadDocsInfo">توضیحات لازم برای آپلود عکس از گالری یا دوربین در صورت نیاز</string>
    <string name="passengersCount">تعداد مسافرها</string>
    <string name="serviceStatus">وضعیت سرویس</string>
    <string name="servicesHistory">تاریخچه سرویس ها</string>
    <string name="driverCanceledTrip">سفر توسط راننده لغو شد</string>
    <string name="userCanceledTrip">سفر توسط مسافر لغو شد</string>
    <string name="inAppPay">پرداخت درون برنامه ای</string>
    <string name="tripEnded">سفر انحام شد</string>


    <string-array name="Alphabet">
        <item>"الف"</item>
        <item>"ب"</item>
        <item>"پ"</item>
        <item>"ت"</item>
        <item>"ث"</item>
        <item>"ج"</item>
        <item>"چ"</item>
        <item>"ح"</item>
        <item>"خ"</item>
        <item>"د"</item>
        <item>"ذ"</item>
        <item>"ر"</item>
        <item>"ز"</item>
        <item>"ژ"</item>
        <item>"س"</item>
        <item>"ش"</item>
        <item>"ص"</item>
        <item>"ض"</item>
        <item>"ط"</item>
        <item>"ظ"</item>
        <item>"ع"</item>
        <item>"غ"</item>
        <item>"ف"</item>
        <item>"ق"</item>
        <item>"ک"</item>
        <item>"گ"</item>
        <item>"ل"</item>
        <item>"م"</item>
        <item>"ن"</item>
        <item>"و"</item>
        <item>"ه"</item>
        <item>"ی"</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>