<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.MaterialComponents.Light"
    android:background="@drawable/dialog_inset"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageButton
            android:id="@+id/closeDialogBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_close"
            android:background="?selectableItemBackground"
            android:layout_gravity="start"
            android:contentDescription="@string/NikoHamrah" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
            android:gravity="center"
            android:text="@string/yourIncome"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/incomeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/fiveHundred"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:textStyle="normal"
                android:text="@string/tooman"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:gravity="center_vertical"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/travels_png"
                android:contentDescription="@string/travelsCount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                android:text="@string/travelsCount"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/totalTripsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                tools:text="@string/twenty"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:gravity="center_vertical"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/route_copy"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/travelsDistance" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                android:text="@string/travelsDistance"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/totalDistanceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                tools:text="@string/fiveHundred"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                android:textSize="14sp"
                android:text="@string/kilometers"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="10dp">
        <ImageView
             android:layout_width="32dp"
             android:layout_height="32dp"
            android:src="@drawable/clock"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/hoursOfDriving" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                android:text="@string/hoursOfDriving"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/totalTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                tools:text="@string/ten"
                android:layout_marginEnd="3dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                android:textSize="14sp"
                android:text="@string/hour"
                android:layout_marginEnd="3dp"/>
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"-->
<!--                android:layout_marginEnd="3dp"-->
<!--                android:text="@string/twenty"-->
<!--                />-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/hoursOfPresence"-->
<!--                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"/>-->

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/cup"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                android:text="@string/yourRate"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/rateTTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                tools:text="@string/fiveHundred"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>