<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:id="@+id/serviceDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
            tools:text="@string/fakeDate"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            >

            <TextView
                android:id="@+id/originTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:layout_marginStart="10dp"
                tools:text="@string/tehran"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:layout_marginHorizontal="10dp"
                android:text="@string/to"/>

            <TextView
                android:id="@+id/destinationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/fakeDestination"/>


        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
            android:text="@string/fare"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:id="@+id/fareTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
            tools:text="@string/number1000"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
            android:text="@string/toman"
            />


    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/acceptRequestBtn"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/acceptRequest"
                android:layout_marginEnd="10dp"
                app:cornerRadius="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/declineRequestBtn"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/declineRequest"
                android:backgroundTint="#D50000"
                app:cornerRadius="20dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        android:background="@drawable/blue_background"
        android:layout_marginHorizontal="10dp"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/navigationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="15dp"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/route_copy"
                android:layout_marginHorizontal="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/navigation"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"/>


        <LinearLayout
            android:id="@+id/callToPassengerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_headset_mic"
                app:tint="@color/black"
                android:layout_marginHorizontal="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/callToPassenger"/>

        </LinearLayout>

    </LinearLayout>



    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>