<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentServiceDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
            tools:text="@string/fakeDate"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                android:text="@string/travelCode"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/ten"
                android:layout_marginHorizontal="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">


            <TextView
                android:id="@+id/passengersCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                tools:text="@string/twenty"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/person"
                android:layout_marginHorizontal="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/line"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                android:text="@string/paid"
                android:textColor="#00E676"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/firstPassengerName"
                    android:layout_marginVertical="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                    android:text="@string/MohsenNiazmand"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/secondPassengerName"
                    android:layout_marginVertical="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                    android:text="@string/MohsenNiazmand"
                    android:layout_marginStart="10dp"/>


                <TextView
                    android:id="@+id/thirdPassengerName"
                    android:layout_marginVertical="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                    android:text="@string/MohsenNiazmand"
                    android:layout_marginStart="10dp"/>


                <TextView
                    android:id="@+id/fourthPassengerName"
                    android:layout_marginVertical="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                    android:text="@string/MohsenNiazmand"
                    android:layout_marginStart="10dp"/>



            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:paddingEnd="10dp"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/callToPassengerBtn"
                    android:layout_width="150dp"
                    android:layout_height="56dp"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/orange"
                    android:text="@string/callToPassenger"
                    android:drawableEnd="@drawable/ic_cal"
                    android:layout_marginEnd="10dp"
                    app:cornerRadius="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/iRodeBtn"
                    android:layout_width="150dp"
                    android:layout_height="56dp"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:minHeight="48dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/orange"
                    android:text="@string/iRode"
                    android:layout_marginEnd="10dp"
                    app:cornerRadius="20dp" />



            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginVertical="3dp"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>