<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/updateApp"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/description_force_update_app"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/noBtnForceUpdate"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/no"
                app:cornerRadius="20dp"
                app:strokeColor="@color/orange" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/yesBtnForceUpdate"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/yes"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
